--- a/apps/ethang-astro/src/pages/blog/use-windows.astro
+++ b/apps/ethang-astro/src/pages/blog/use-windows.astro
@@ -275,7 +275,8 @@ const winGetInstallEverything = `winget install voidtools.Everything`;
     <p>Ubuntu has the equivalent Flameshot</p>
     <p>
       Mac? Either use Linux apps such as Flameshot or <span
-        class="text-green-500">$$$</span>
+        class="text-green-500">$$$</span
+      >
     </p>
     <h2 id={toc[4].id}>{toc[4].label}</h2>
     <p>
