--- a/apps/ethang-astro/src/pages/blog/your-lodash-get-implementation-sucks.astro
+++ b/apps/ethang-astro/src/pages/blog/your-lodash-get-implementation-sucks.astro
@@ -222,7 +222,8 @@ it(\`should return the default value when path is empty\`, () => {
     <p>
       <a
         href="https://github.com/lodash/lodash/blob/v5-wip/test/get-and-result.spec.js"
-        target="_blank">See the lodash tests here.</a>
+        target="_blank">See the lodash tests here.</a
+      >
     </p>
     <p>The first failure is here:</p>
     <CodeBlock code={failTest1} />
@@ -260,7 +261,8 @@ it(\`should return the default value when path is empty\`, () => {
       The odd Object(0) is not the issue here. It is that fact that
       <strong
         >this implementation, who's only job is to resolve object keys, doesn't
-        consider the language standards for what may be a key.</strong>
+        consider the language standards for what may be a key.</strong
+      >
     </p>
     <p>Next test.</p>
     <CodeBlock code={failTest2} />
@@ -317,7 +319,8 @@ it(\`should return the default value when path is empty\`, () => {
     <CodeBlock code={failTest11} />
     <h2>
       <a href="https://www.destroyallsoftware.com/talks/wat" target="_blank"
-        >JavaScript Without lodash is Wat</a>
+        >JavaScript Without lodash is Wat</a
+      >
     </h2>
     <p>
       If you believe you can actually reproduce lodash get from scratch into a
