--- a/apps/ethang-astro/src/layouts/Layout.astro
+++ b/apps/ethang-astro/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import NavDrawer from "../components/NavDrawer.astro";
 type Props = {
   title?: string;
   description?: string;
@@ -38,101 +39,9 @@ const pageDescription = description ?? "Messin' around on the web sometimes.";
     <meta name="description" content={pageDescription} />
   </head>
   <body>
-    <div class="grid sm:grid-cols-[auto_1fr] gap-4">
-      <div class="hidden sm:block border-r-2 min-h-screen select-none">
-        <h1 class="px-5 py-1 font-bold text-3xl mt-4">EthanG</h1>
-        <nav class="grid gap-4" aria-label="Main">
-          <ul class="menu menu-sm">
-            <li>
-              <a rel="prefetch" href="/" class="link text-base">Home</a>
-            </li>
-            <li>
-              <a rel="prefetch" href="/courses" class="link text-base"
-                >Courses</a
-              >
-            </li>
-            <li>
-              <a
-                class="link text-base"
-                href="https://www.linkedin.com/build-relation/newsletter-follow?entityUrn=7316126013938143232"
-                target="_blank">Newsletter</a>
-            </li>
-          </ul>
-        </nav>
-        <div class="divider mx-4"></div>
-        <nav class="grid gap-4" aria-label="Social">
-          <ul class="menu menu-sm">
-            <li>
-              <a
-                href="https://www.linkedin.com/in/ethan-glover/"
-                target="_blank"
-                class="link text-base">LinkedIn</a
-              >
-            </li>
-            <li>
-              <a
-                href="https://github.com/eglove"
-                target="_blank"
-                class="link text-base">GitHub</a
-              >
-            </li>
-            <li>
-              <a
-                href="https://frontendmasters.com/u/ethang/"
-                target="_blank"
-                class="link text-base">Frontend Masters</a
-              >
-            </li>
-            <li>
-              <a
-                href="https://www.credly.com/users/ethang"
-                target="_blank"
-                class="link text-base">Credly</a
-              >
-            </li>
-            <li>
-              <a
-                href="https://www.goodreads.com/user/show/6137062-ethan-glover"
-                target="_blank"
-                class="link text-base">Goodreads</a
-              >
-            </li>
-            <li>
-              <a
-                href="https://www.khanacademy.org/profile/ethanglover/badges"
-                target="_blank"
-                class="link text-base">Khan Academy</a
-              >
-            </li>
-          </ul>
-        </nav>
-      </div>
-      <div class="sm:hidden navbar bg-base-100 select-none">
-        <div class="navbar-start">
-          <h1 class="px-5 py-1 font-bold text-xl mt-4">EthanG</h1>
-        </div>
-        <nav class="navbar-center flex" aria-label="Main">
-          <ul class="menu menu-horizontal px-1">
-            <li>
-              <a rel="prefetch" href="/" class="link text-base">Home</a>
-            </li>
-            <li>
-              <a rel="prefetch" href="/courses" class="link text-base"
-                >Courses</a
-              >
-            </li>
-            <li>
-              <a
-                class="link text-base"
-                href="https://www.linkedin.com/build-relation/newsletter-follow?entityUrn=7316126013938143232"
-                target="_blank">Newsletter</a>
-            </li>
-          </ul>
-        </nav>
-      </div>
-      <div id="main-content" class="m-4 sm:mx-0">
-        <slot />
-      </div>
+    <NavDrawer />
+    <div id="main-content" class="m-4 px-4 sm:mx-0">
+      <slot />
     </div>
   </body>
 </html>
