--- a/apps/ethang-astro/src/pages/blog/ai-paradox.astro
+++ b/apps/ethang-astro/src/pages/blog/ai-paradox.astro
@@ -138,9 +138,9 @@ import WordCount from "../../components/WordCount.astro";
       emphasizing routine code generation, may not have been taught to take
       these critical foundational tasks seriously. Instead, there's a belief
       that such complex issues are secondary, or that "real" work is limited to
-      "DevOps" or "cloud" specializations. Crucially, I've often been brought
-      in to fix these very issues, even when the development leads and
-      architects on those teams were ostensibly senior to me.
+      "DevOps" or "cloud" specializations. Crucially, I've often been brought in
+      to fix these very issues, even when the development leads and architects
+      on those teams were ostensibly senior to me.
     </p>
 
     <p>
