center blog content

--- a/apps/ethang-astro/src/components/NavDrawer.astro
+++ b/apps/ethang-astro/src/components/NavDrawer.astro
@@ -28,16 +28,19 @@
       <li>
         <a
           href="https://www.linkedin.com/build-relation/newsletter-follow?entityUrn=7316126013938143232"
-          target="_blank">Newsletter</a>
+          target="_blank">Newsletter</a
+        >
       </li>
       <li>
         <a href="https://www.linkedin.com/in/ethan-glover/" target="_blank"
-          >LinkedIn</a>
+          >LinkedIn</a
+        >
       </li>
       <li><a href="https://github.com/eglove" target="_blank">GitHub</a></li>
       <li>
         <a href="https://frontendmasters.com/u/ethang/" target="_blank"
-          >Frontend Masters</a>
+          >Frontend Masters</a
+        >
       </li>
       <li>
         <a href="https://www.credly.com/users/ethang" target="_blank">Credly</a>
@@ -45,12 +48,14 @@
       <li>
         <a
           href="https://www.goodreads.com/user/show/6137062-ethan-glover"
-          target="_blank">Goodreads</a>
+          target="_blank">Goodreads</a
+        >
       </li>
       <li>
         <a
           href="https://www.khanacademy.org/profile/ethanglover/badges"
-          target="_blank">Khan Academy</a>
+          target="_blank">Khan Academy</a
+        >
       </li>
     </ul>
   </div>
