escaping hook hell

--- a/apps/ethang-astro/src/components/NavDrawer.astro
+++ b/apps/ethang-astro/src/components/NavDrawer.astro
@@ -1,4 +1,4 @@
-<div class="drawer">
+<div class="drawer select-none">
   <input id="my-drawer" type="checkbox" class="drawer-toggle" />
   <div class="drawer-content flex gap-4 items-center mt-4 pb-4 pl-4 border-b-2">
     <label for="my-drawer" class="btn drawer-button">
