--- a/apps/ethang-astro/src/pages/404.astro
+++ b/apps/ethang-astro/src/pages/404.astro
@@ -1,3 +1,6 @@
 ---
-return new Response('Naughty', {status: 418, headers: {'Content-Type': 'application/pdf'}})
+return new Response("Naughty", {
+  status: 418,
+  headers: { "Content-Type": "application/pdf" },
+});
 ---
