--- a/apps/ethang-astro/src/pages/index.astro
+++ b/apps/ethang-astro/src/pages/index.astro
@@ -9,6 +9,7 @@ import optionalChainingImage from "../images/optional-chaining.png";
 import personAtCrossroads from "../images/person-at-crossroads.png";
 import sealioningImage from "../images/sealioning/sealioning.png";
 import aiParadoxImage from "../images/ai-paradox.png";
+import choaticState from "../images/chaotic-state-to-simplicity.png";
 
 const cards = [
   {
@@ -18,17 +19,17 @@ const cards = [
     href: "/blog/how-i-code",
   },
   {
-    src: aiParadoxImage,
-    alt: `An abstract image illustrating the "AI Paradox." On the left, a developer appears overwhelmed, with hands on their head amidst complex, swirling code and abstract AI elements. On the right, another developer looks confident and a bit triumphant, surrounded by organized code and circuit-like patterns, representing the revolutionary potential of AI. The background is a mix of digital patterns and glowing lines, symbolizing the digital world and the evolving tech landscape.`,
-    title:
-      "The AI Paradox: Why Some Developers Are Underwhelmed and Others See a Revolution",
-    href: "/blog/ai-paradox",
-  },
-  {
     src: chromaticSwirl,
     alt: "chromatic swirl",
     title: "Building a State Management System with Classes in React",
     href: "/blog/state-management-classes",
+  },
+  {
+    src: choaticState,
+    alt: "An abstract illustration depicting a messy, tangled web of dark lines and nodes transforming into a clear, smooth, bright path leading to a simple, streamlined structure, symbolizing the simplification of complex code.",
+    title:
+      "Escaping Hook Hell: Pragmatic State Management for Hybrid JavaScript",
+    href: "/blog/escaping-hook-hell",
   },
   {
     src: optionalChainingImage,
@@ -48,6 +49,13 @@ const cards = [
     alt: "sealioning comic",
     title: "Navigating Sealioning in Remote Work Environments",
     href: "/blog/sealioning-in-remote-work",
+  },
+  {
+    src: aiParadoxImage,
+    alt: `An abstract image illustrating the "AI Paradox." On the left, a developer appears overwhelmed, with hands on their head amidst complex, swirling code and abstract AI elements. On the right, another developer looks confident and a bit triumphant, surrounded by organized code and circuit-like patterns, representing the revolutionary potential of AI. The background is a mix of digital patterns and glowing lines, symbolizing the digital world and the evolving tech landscape.`,
+    title:
+      "The AI Paradox: Why Some Developers Are Underwhelmed and Others See a Revolution",
+    href: "/blog/ai-paradox",
   },
 ];
 ---
