--- a/apps/ethang-astro/src/components/CodeBlock.astro
+++ b/apps/ethang-astro/src/components/CodeBlock.astro
@@ -15,7 +15,7 @@ const codeHtml = hljs.highlight(code, {
 ---
 
 <pre
-  class="whitespace-pre-wrap max-w-[100vw] select-none">
+  class="overflow-x-auto select-none max-w-full rounded-md p-4 bg-base-200 text-base-content text-sm">
     <code class={resolvedLanguage}>
     <Fragment set:html={codeHtml} />
     </code>
