--- a/apps/ethang-astro/src/pages/blog/understanding-recovering-from-burnout.astro
+++ b/apps/ethang-astro/src/pages/blog/understanding-recovering-from-burnout.astro
@@ -335,7 +335,7 @@ import BlogLayout from "../../layouts/BlogLayout.astro";
     <a
       target="_blank"
       href="https://www.goodreads.com/book/show/35187211-the-polyvagal-theory-in-therapy"
-      >TThe Polyvagal Theory</a
+      >The Polyvagal Theory</a
     >, popularized by Deb Dana, offers a powerful framework for understanding
     our nervous system's response to stress and safety. It helps us recognize
     why we react the way we do and how to gently guide ourselves back to a state
